# qwen-auto-register

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  config.json  deploy.sh  pyproject.toml  requirements.txt  start.sh
docs/superpowers/plans/: 2026-05-19-human-verification-wait-state.md  2026-05-19-worker-mail-local-accounts.md
docs/superpowers/specs/: 2026-05-19-qwen-human-verification-wait-state-design.md  2026-05-19-qwen-worker-mail-local-accounts-design.md
scripts/: build.ps1  check_patchright.py  start.ps1
src/: launch_gui.py
src/auto_register/: config.py
src/auto_register/archive/legacy/integrations/: qwen_oauth_client.py
src/auto_register/gui/: app.py
src/auto_register/integrations/: qwen_portal.py
src/auto_register/providers/: __init__.py  one_sec_mail_provider.py
src/auto_register/web/: app.py
src/auto_register/writer/: __init__.py  accounts_writer.py
tests/: test_accounts_writer.py  test_config.py  test_qwen_portal.py  test_web_runtime_state.py  test_worker_mail_provider.py
